--- a/Flask_Blog/static/main.css
+++ b/Flask_Blog/static/main.css
@@ -78,3 +78,8 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+
+.form-check .form-check-input {
+    float: right;
+    margin-right: 41em;
+}
