--- a/Flask_Blog/templates/layout.html
+++ b/Flask_Blog/templates/layout.html
@@ -34,12 +34,12 @@
                 </button>
                 <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="/">Home</a>
-                        <a class="nav-item nav-link" href="/about">About</a>
+                        <a class="nav-item nav-link" href="{{url_for('home')}}">Home</a>
+                        <a class="nav-item nav-link" href="{{url_for('about_page')}}">About</a>
                     </div>
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="/login">Login</a>
-                        <a class="nav-item nav-link" href="/register">Register</a>
+                        <a class="nav-item nav-link" href="{{url_for('login')}}">Login</a>
+                        <a class="nav-item nav-link" href="{{url_for('register')}}">Register</a>
                     </div>
                 </div>
             </div>
