imagem padrao adicionada, exibe email e current_user

--- a/Flask_Blog/flaskblog/static/main.css
+++ b/Flask_Blog/flaskblog/static/main.css
@@ -83,3 +83,23 @@ a.article-title:hover {
     float: right;
     margin-right: 41em;
 }
+
+
+/* FIX PRA IMAGEM FICAR DO JEITO CERTO*/
+
+.media {
+  display: flex;
+  align-items: center; 
+}
+
+.account-img {
+  height: 125px; 
+  width: 125px; 
+  margin-right: 20px; 
+  object-fit: cover; 
+}
+
+.media-body {
+  
+  flex: 1; 
+}
