--- a/Flask_Blog/flaskblog/templates/account.html
+++ b/Flask_Blog/flaskblog/templates/account.html
@@ -9,7 +9,62 @@
             <p class="text-secondary">{{ current_user.email }}</p>
         </div>
     </div>
-    <!-- FORM HERE -->
+
+    <form method="POST" action="" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        <fieldset class="form_group">
+            <legend class="border-bottom mb-4">Informações da Conta</legend>
+            <div class="form_group">
+                {{ form.username.label(class = "form-control-label") }}
+
+                {% if form.username.errors %}
+                {{ form.username(class = "form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.username.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.username(class = "form-control form-control-lg") }}
+                {% endif %}
+            </div>
+
+            <div class="form_group">
+                {{ form.email.label(class = "form-control-label") }}
+
+                {% if form.email.errors %}
+                {{ form.email(class = "form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.email.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.email(class = "form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <br>
+            <div class="mb-3">
+                {{ form.picture.label(class="form-label") }}
+
+                {% if form.picture.errors %}
+                {{ form.picture(class="form-control is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.picture.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.picture(class="form-control") }}
+                {% endif %}
+            </div>
+        </fieldset>
+        <br>
+        <div class="form_group">
+            {{ form.submit(class="btn btn-outline-info") }}
+        </div>
+    </form>
+
 </div>
 
 {% endblock content %}
