--- a/Flask_Blog/flaskblog/templates/layout.html
+++ b/Flask_Blog/flaskblog/templates/layout.html
@@ -34,16 +34,17 @@
                 </button>
                 <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
-                        <a class="nav-item nav-link" href="{{url_for('home')}}">Home</a>
+                        <a class="nav-item nav-link" href="{{url_for('home')}}">Inicio</a>
                         <a class="nav-item nav-link" href="{{url_for('about_page')}}">About</a>
                     </div>
                     <div class="navbar-nav">
                         {% if current_user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{{url_for('account')}}">Account</a>
-                            <a class="nav-item nav-link" href="{{url_for('logout')}}">Logout</a>
+                            <a class="nav-item nav-link" href="{{url_for('new_post')}}">Nova Postagem</a>
+                            <a class="nav-item nav-link" href="{{url_for('account')}}">Conta</a>
+                            <a class="nav-item nav-link" href="{{url_for('logout')}}">Sair</a>
                         {% else %}
                             <a class="nav-item nav-link" href="{{url_for('login')}}">Login</a>
-                            <a class="nav-item nav-link" href="{{url_for('register')}}">Register</a>
+                            <a class="nav-item nav-link" href="{{url_for('register')}}">Registrar</a>
                         {% endif %}
                     </div>
                 </div>
