--- a/Flask_Blog/flaskblog/templates/home.html
+++ b/Flask_Blog/flaskblog/templates/home.html
@@ -10,6 +10,11 @@
             <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
         </div>
         <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+
+        {% if post.image_file %}
+            <img class="img-fluid rounded mt-3 mb-3" src="{{ url_for('static', filename='post_pics/' + post.image_file) }}">
+        {% endif %}
+
         <p class="article-content">{{ post.content }}</p>
     </div>
 </article>
