--- a/Flask_Blog/flaskblog/templates/layout.html
+++ b/Flask_Blog/flaskblog/templates/layout.html
@@ -17,9 +17,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% if title %}
-    <title>Flask Blog - {{ title }}</title>
+    <title>Sistema - {{ title }}</title>
     {% else %}
-    <title>Flask Blog</title>
+    <title>Sistema</title>
     {% endif %}
 </head>
 
@@ -68,13 +68,13 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                    <h3>Sidebar teste</h3>
+                    <p class='text-muted'> placeholder placeholder placeholder
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Latest Posts</li>
-                        <li class="list-group-item list-group-item-light">Announcements</li>
-                        <li class="list-group-item list-group-item-light">Calendars</li>
-                        <li class="list-group-item list-group-item-light">etc</li>
+                        <li class="list-group-item list-group-item-light">----------</li>
+                        <li class="list-group-item list-group-item-light">----------</li>
+                        <li class="list-group-item list-group-item-light">----------</li>
+                        <li class="list-group-item list-group-item-light">--------</li>
                     </ul>
                     </p>
                 </div>
