--- a/Flask_Blog/flaskblog/templates/register.html
+++ b/Flask_Blog/flaskblog/templates/register.html
@@ -5,7 +5,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form_group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Registrar</legend>
                 <div class="form_group">
                     {{ form.username.label(class = "form-control-label") }}
 
@@ -74,7 +74,7 @@
     </div>
     <div class="border-top pr-3">
         <small class="text-muted">
-            Already have an account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
+            Já tem uma conta? <a class="ml-2" href="{{ url_for('login') }}">Logar</a>
         </small>
     </div>
 
