--- a/Flask_Blog/flaskblog/templates/home.html
+++ b/Flask_Blog/flaskblog/templates/home.html
@@ -2,14 +2,14 @@
 {% block content %}
 
 {% for post in posts %}
-<article class="media content-section">
+<article class="media content-section align-items-start">
     <img class="rounded-circle article-img" src="{{ url_for('static', filename = 'profile_pics/') + post.author.image_file }}" alt="">
     <div class="media-body">
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.author.username }}</a>
             <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
         </div>
-        <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+        <h2><a class="article-title" href="{{ url_for('post', post_id = post.id) }}">{{ post.title }}</a></h2>
 
         {% if post.image_file %}
             <img class="img-fluid rounded mt-3 mb-3" src="{{ url_for('static', filename='post_pics/' + post.image_file) }}">
