--- a/Flask_Blog/flaskblog/templates/login.html
+++ b/Flask_Blog/flaskblog/templates/login.html
@@ -47,13 +47,13 @@
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
         <small class="text-muted ml-2">
-            <a href="#">Forgot Password?</a>
+            <a href="#">Esqueceu a senha?</a>
         </small>
     </form>
 </div>
 <div class="border-top pr-3">
     <small class="text-muted">
-        Create new account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up</a>
+        Criar nova conta? <a class="ml-2" href="{{ url_for('register') }}">Registre-se</a>
     </small>
 </div>
 
