feat: resetar senha por email addicionado

--- a/escolaJAC/siteMain/templates/login.html
+++ b/escolaJAC/siteMain/templates/login.html
@@ -47,7 +47,7 @@
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
         <small class="text-muted ml-2">
-            <a href="#">Esqueceu a senha?</a>
+            <a href="{{ url_for('reset_request') }}">Esqueceu a senha?</a>
         </small>
     </form>
 </div>
