--- a/escolaJAC/siteMain/templates/register.html
+++ b/escolaJAC/siteMain/templates/register.html
@@ -74,7 +74,7 @@
     </div>
     <div class="border-top pr-3">
         <small class="text-muted">
-            Já tem uma conta? <a class="ml-2" href="{{ url_for('login') }}">Logar</a>
+            Já tem uma conta? <a class="ml-2" href="{{ url_for('users.login') }}">Logar</a>
         </small>
     </div>
 
