--- a/escolaJAC/siteMain/templates/errors/404.html
+++ b/escolaJAC/siteMain/templates/errors/404.html
@@ -2,6 +2,6 @@
 {% block content %}
     <div class="content-section">
         <h1>Página não encontrada : &#40; (404)<h1>
-            <p>Essa página não existe</p>
+            <h5>Essa página não existe</p>
     </div>
 {% endblock %}
