--- a/escolaJAC/siteMain/templates/account.html
+++ b/escolaJAC/siteMain/templates/account.html
@@ -1,70 +1,57 @@
 {% extends "layout.html" %}
 {% block content %}
-
 <div class="content-section">
-    <div class="media">
+    <div class="media d-flex align-items-center mb-4">
         <img class="rounded-circle account-img" src="{{ image_file }}">
-        <div class="media-body">
+        <div class="media-body ms-3">
             <h2 class="account-heading">{{ current_user.username }}</h2>
-            <p class="text-secondary">{{ current_user.email }}</p>
+            <p class="text-secondary mb-0">{{ current_user.email }}</p>
         </div>
     </div>
 
     <form method="POST" action="" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        <fieldset class="form_group">
+        <fieldset>
             <legend class="border-bottom mb-4">Informações da Conta</legend>
-            <div class="form_group">
-                {{ form.username.label(class = "form-control-label") }}
-
+            <div class="mb-3">
+                {{ form.username.label(class="form-label") }}
                 {% if form.username.errors %}
-                {{ form.username(class = "form-control form-control-lg is-invalid") }}
+                {{ form.username(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
                     {% for error in form.username.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.username(class = "form-control form-control-lg") }}
+                {{ form.username(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-
-            <div class="form_group">
-                {{ form.email.label(class = "form-control-label") }}
-
+            <div class="mb-3">
+                {{ form.email.label(class="form-label") }}
                 {% if form.email.errors %}
-                {{ form.email(class = "form-control form-control-lg is-invalid") }}
+                {{ form.email(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
                     {% for error in form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.email(class = "form-control form-control-lg") }}
+                {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <br>
             <div class="mb-3">
                 {{ form.picture.label(class="form-label") }}
-
-                {% if form.picture.errors %}
-                {{ form.picture(class="form-control is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.picture.errors %}
-                    <span>{{ error }}</span>
-                    {% endfor %}
-                </div>
-                {% else %}
                 {{ form.picture(class="form-control") }}
+                {% if form.picture.errors %}
+                    {% for error in form.picture.errors %}
+                    <span class="text-danger">{{ error }}</span><br>
+                    {% endfor %}
                 {% endif %}
             </div>
         </fieldset>
-        <br>
-        <div class="form_group">
-            {{ form.submit(class="btn btn-outline-info") }}
+        <div class="mt-4">
+            {{ form.submit(class="btn btn-main") }}
         </div>
     </form>
-
 </div>
-
 {% endblock content %}
