--- a/escolaJAC/siteMain/templates/layout.html
+++ b/escolaJAC/siteMain/templates/layout.html
@@ -2,19 +2,13 @@
 <html lang="pt-BR">
 
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.rtl.min.css"
-        integrity="sha384-CfCrinSRH2IR6a4e6fy2q6ioOX7O6Mtm1L9vRvFZ1trBncWmMePhzvafv7oIcWiW" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css')}}">
-
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% if title %}
     <title>Sistema - {{ title }}</title>
@@ -27,24 +21,24 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                <a class="navbar-brand mr-4" href="{{ url_for('main.home') }}">Início</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+                <a class="navbar-brand me-4" href="{{ url_for('main.home') }}">Início</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse d-flex justify-content-between" id="navbarToggle">
-                    <div class="navbar-nav mr-auto">
+                <div class="collapse navbar-collapse" id="navbarToggle">
+                    <div class="navbar-nav me-auto">
                         <a class="nav-item nav-link" href="{{url_for('main.home')}}"></a>
                         <a class="nav-item nav-link" href="{{url_for('main.about_page')}}">Sobre</a>
                     </div>
                     <div class="navbar-nav">
                         {% if current_user.is_authenticated %}
-                            <a class="nav-item nav-link" href="{{url_for('posts.new_post')}}">Nova Publicação</a>
-                            <a class="nav-item nav-link" href="{{url_for('users.account')}}">Conta</a>
-                            <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Sair</a>
+                        <a class="nav-item nav-link" href="{{url_for('posts.new_post')}}">Nova Publicação</a>
+                        <a class="nav-item nav-link" href="{{url_for('users.account')}}">Conta</a>
+                        <a class="nav-item nav-link" href="{{url_for('users.logout')}}">Sair</a>
                         {% else %}
-                            <a class="nav-item nav-link" href="{{url_for('users.login')}}">Login</a>
-                            <a class="nav-item nav-link" href="{{url_for('users.register')}}">Registrar</a>
+                        <a class="nav-item nav-link" href="{{url_for('users.login')}}">Login</a>
+                        <a class="nav-item nav-link" href="{{url_for('users.register')}}">Registrar</a>
                         {% endif %}
                     </div>
                 </div>
@@ -55,7 +49,7 @@
     <main role="main" class="container">
         <div class="row">
             <div class="col-md-8">
-                {% with messages = get_flashed_messages(with_categories = true) %}
+                {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                 {% for category, message in messages %}
                 <div class="alert alert-{{ category }}">
@@ -68,23 +62,21 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Sidebar teste</h3>
-                    <p class='text-muted'> placeholder placeholder placeholder
+                    <h3>Sidebar</h3>
+                    <p class='text-muted'>placeholder placeholder placeholder</p>
                     <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">----------</li>
-                        <li class="list-group-item list-group-item-light">----------</li>
-                        <li class="list-group-item list-group-item-light">----------</li>
-                        <li class="list-group-item list-group-item-light">--------</li>
+                        <li class="list-group-item list-group-item-light">Últimas Postagens</li>
+                        <li class="list-group-item list-group-item-light">Anúncios</li>
+                        <li class="list-group-item list-group-item-light">Calendário</li>
+                        <li class="list-group-item list-group-item-light">Etc...</li>
                     </ul>
-                    </p>
                 </div>
             </div>
         </div>
     </main>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
 </body>
