--- a/escolaJAC/siteMain/templates/login.html
+++ b/escolaJAC/siteMain/templates/login.html
@@ -1,60 +1,54 @@
 {% extends "layout.html" %}
 {% block content %}
-
 <div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
-        <fieldset class="form_group">
+        <fieldset>
             <legend class="border-bottom mb-4">Login</legend>
-
             <div class="mb-3">
-                {{ form.email.label(class = "form-control-label") }}
-
+                {{ form.email.label(class="form-label") }}
                 {% if form.email.errors %}
-                {{ form.email(class = "form-control form-control-lg is-invalid") }}
+                {{ form.email(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
                     {% for error in form.email.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.email(class = "form-control form-control-lg") }}
+                {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-
             <div class="mb-3">
-                {{ form.password.label(class = "form-control-label") }}
-
+                {{ form.password.label(class="form-label") }}
                 {% if form.password.errors %}
-                {{ form.password(class = "form-control form-control-lg is-invalid") }}
+                {{ form.password(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
                     {% for error in form.password.errors %}
                     <span>{{ error }}</span>
                     {% endfor %}
                 </div>
                 {% else %}
-                {{ form.password(class = "form-control form-control-lg") }}
+                {{ form.password(class="form-control form-control-lg") }}
                 {% endif %}
             </div>
-            <div class="form-check">
+            <div class="form-check mb-3">
                 {{ form.remember(class="form-check-input") }}
                 {{ form.remember.label(class="form-check-label") }}
             </div>
-
         </fieldset>
-        <br>
         <div class="mb-3">
-            {{ form.submit(class="btn btn-outline-success") }}
+            {{ form.submit(class="btn btn-main w-100") }}
         </div>
-        <small class="text-muted ml-2">
-            <a href="{{ url_for('users.reset_request') }}">Esqueceu a senha?</a>
-        </small>
+        <div class="text-center">
+            <small class="text-muted">
+                <a href="{{ url_for('users.reset_request') }}">Esqueceu a senha?</a>
+            </small>
+        </div>
     </form>
+    <div class="border-top pt-3 mt-3">
+        <small class="text-muted">
+            Criar nova conta? <a class="ms-2" href="{{ url_for('users.register') }}">Registre-se</a>
+        </small>
+    </div>
 </div>
-<div class="border-top pr-3">
-    <small class="text-muted">
-        Criar nova conta? <a class="ml-2" href="{{ url_for('users.register') }}">Registre-se</a>
-    </small>
-</div>
-
 {% endblock content %}
