--- a/escolaJAC/siteMain/templates/register.html
+++ b/escolaJAC/siteMain/templates/register.html
@@ -1,81 +1,78 @@
 {% extends "layout.html" %}
 {% block content %}
 
-    <div class="content-section">
-        <form method="POST" action="">
-            {{ form.hidden_tag() }}
-            <fieldset class="form_group">
-                <legend class="border-bottom mb-4">Registrar</legend>
-                <div class="form_group">
-                    {{ form.username.label(class = "form-control-label") }}
-
-                    {% if form.username.errors  %}
-                        {{ form.username(class = "form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.username.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.username(class = "form-control form-control-lg") }}
-                    {% endif %}
+<div class="content-section">
+    <form method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset>
+            <legend class="border-bottom mb-4">Registrar</legend>
+            <div class="mb-3">
+                {{ form.username.label(class="form-label") }}
+                {% if form.username.errors %}
+                {{ form.username(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.username.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
                 </div>
-
-                <div class="form_group">
-                    {{ form.email.label(class = "form-control-label") }}
-                    
-                    {% if form.email.errors  %}
-                        {{ form.email(class = "form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.email(class = "form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-
-                 <div class="form_group">
-                    {{ form.password.label(class = "form-control-label") }}
-                    
-                    {% if form.password.errors  %}
-                        {{ form.password(class = "form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class = "form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-
-                 <div class="form_group">
-                    {{ form.confirm_password.label(class = "form-control-label") }}
-                    
-                    {% if form.confirm_password.errors  %}
-                        {{ form.confirm_password(class = "form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.confirm_password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.confirm_password(class = "form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-            </fieldset>
-            <br>
-            <div class="form_group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {% else %}
+                {{ form.username(class="form-control form-control-lg") }}
+                {% endif %}
             </div>
-        </form>
-    </div>
-    <div class="border-top pr-3">
+
+            <div class="mb-3">
+                {{ form.email.label(class="form-label") }}
+                {% if form.email.errors %}
+                {{ form.email(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.email.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.email(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+
+            <div class="mb-3">
+                {{ form.password.label(class="form-label") }}
+                {% if form.password.errors %}
+                {{ form.password(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.password.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.password(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+
+            <div class="mb-3">
+                {{ form.confirm_password.label(class="form-label") }}
+                {% if form.confirm_password.errors %}
+                {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.confirm_password.errors %}
+                    <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {% else %}
+                {{ form.confirm_password(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+        </fieldset>
+        
+        <div class="mt-4 mb-3">
+            {{ form.submit(class="btn btn-main w-100") }}
+        </div>
+    </form>
+    
+    <div class="border-top pt-3">
         <small class="text-muted">
-            Já tem uma conta? <a class="ml-2" href="{{ url_for('users.login') }}">Logar</a>
+            Já tem uma conta? <a class="ms-2" href="{{ url_for('users.login') }}">Logar</a>
         </small>
     </div>
+</div>
 
 {% endblock content %}
