--- a/escolaJAC/siteMain/templates/user_posts.html
+++ b/escolaJAC/siteMain/templates/user_posts.html
@@ -3,33 +3,40 @@
 
 <h1 class="mb-3">Publicações de {{ user.username }} ({{ posts.total }})</h1>
 {% for post in posts.items %}
-<article class="media content-section align-items-start">
-    <img class="rounded-circle article-img" src="{{ url_for('static', filename = 'profile_pics/') + post.author.image_file }}" alt="">
+<article class="media content-section">
+    <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
     <div class="media-body">
         <div class="article-metadata">
-            <a class="mr-2" href="{{ url_for('users.user_posts', username = post.author.username) }}">{{ post.author.username }}</a>
+            <a class="me-2" href="{{ url_for('users.user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
             <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
         </div>
-        <h2><a class="article-title" href="{{ url_for('posts.post', post_id = post.id) }}">{{ post.title }}</a></h2>
+        <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
 
         {% if post.image_file %}
-            <img class="img-fluid rounded mt-3 mb-3" src="{{ url_for('static', filename='post_pics/' + post.image_file) }}">
+        <img class="img-fluid rounded-3 my-3" src="{{ url_for('static', filename='post_pics/' + post.image_file) }}">
         {% endif %}
 
         <p class="article-content">{{ post.content }}</p>
     </div>
 </article>
 {% endfor %}
-{% for page_num in posts.iter_pages(left_edge = 1, right_edge = 1, left_current = 1, right_current = 2) %}
+
+{% if posts.pages > 1 %}
+<div class="d-flex justify-content-center my-4">
+    {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
     {% if page_num %}
-        {% if posts.page == page_num %}
-            <a class="btn btn-info mb-4" href="{{ url_for('users.user_posts', username = user.username, page=page_num) }}">{{ page_num }}</a>
-        {% else %}
-            <a class="btn btn-outline-info mb-4" href="{{ url_for('users.user_posts', username = user.username, page=page_num) }}">{{ page_num }}</a>
-        {% endif %}
+    {% if posts.page == page_num %}
+    <a class="btn btn-main mx-1"
+        href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
     {% else %}
-        ...
+    <a class="btn btn-outline-main mx-1"
+        href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
     {% endif %}
-{% endfor %}
+    {% else %}
+    <span class="mx-1">...</span>
+    {% endif %}
+    {% endfor %}
+</div>
+{% endif %}
 
 {% endblock content %}
