--- a/escolaJAC/siteMain/templates/layout.html
+++ b/escolaJAC/siteMain/templates/layout.html
@@ -60,7 +60,7 @@
                 {% endwith %}
                 {% block content %}{% endblock %}
             </div>
-            <div class="col-md-4">
+            <!--<div class="col-md-4">
                 <div class="content-section">
                     <h3>Sidebar</h3>
                     <p class='text-muted'>placeholder placeholder placeholder</p>
@@ -71,7 +71,7 @@
                         <li class="list-group-item list-group-item-light">Etc...</li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
 
