--- a/escolaJAC/siteMain/templates/about.html
+++ b/escolaJAC/siteMain/templates/about.html
@@ -1,6 +1,20 @@
 {% extends "layout.html" %}
 {% block content %}
 
-    <h1>placeholder</h1>
+<div class="content-section">
+    <h1>Sobre o site</h1>
+    <p>Este é um portal educacional desenvolvido para aprimorar a comunicação e a organização escolar.
+        Projeto feito para a atividade prática interdisciplinar.</p>
+    <p>Desenvolvido por <a href="https://github.com/emid1-o" target="_blank"
+            class="text-success fw-bold">Emídio</a>.</p>
+
+    <div class="mt-3">
+        <a href="https://github.com/emid1-o" target="_blank" title="Visitar GitHub">
+            <i class="bi bi-github" style="font-size: 2rem; color: black;"></i>
+        </a>
+    </div>
+
+</div>
+
 
 {% endblock content %}
