--- a/escolaJAC/siteMain/templates/layout.html
+++ b/escolaJAC/siteMain/templates/layout.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css')}}">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     {% if title %}
     <title>Sistema - {{ title }}</title>
     {% else %}
@@ -60,18 +62,31 @@
                 {% endwith %}
                 {% block content %}{% endblock %}
             </div>
-            <!--<div class="col-md-4">
-                <div class="content-section">
-                    <h3>Sidebar</h3>
-                    <p class='text-muted'>placeholder placeholder placeholder</p>
-                    <ul class="list-group">
-                        <li class="list-group-item list-group-item-light">Últimas Postagens</li>
-                        <li class="list-group-item list-group-item-light">Anúncios</li>
-                        <li class="list-group-item list-group-item-light">Calendário</li>
-                        <li class="list-group-item list-group-item-light">Etc...</li>
-                    </ul>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <div class="card-header">
+                        <strong>Anúncios Fixados</strong>
+                    </div>
+                    <div class="list-group list-group-flush">
+
+                        {% if pinned_posts %}
+                        {% for post in pinned_posts %}
+                        <a href="{{ url_for('posts.post', post_id=post.id) }}"
+                            class="list-group-item list-group-item-action">
+                            {{ post.title }}
+                            <small class="text-muted d-block">{{ post.date_posted.strftime('%d/%m/%Y') }}</small>
+                        </a>
+                        {% endfor %}
+                        {% else %}
+                        <li class="list-group-item">Nenhum anúncio fixado no momento.</li>
+                        {% endif %}
+
+                    </div>
                 </div>
-            </div> -->
+
+                <div class="card">
+                </div>
+            </div>
         </div>
     </main>
 
