--- a/escolaJAC/siteMain/templates/home.html
+++ b/escolaJAC/siteMain/templates/home.html
@@ -12,7 +12,7 @@
         <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
 
         {% if post.image_file %}
-            <img class="img-fluid rounded-3 my-3" src="{{ url_for('static', filename='post_pics/' + post.image_file) }}">
+            <img class="img-fluid rounded-3 my-3" src="{{ post.author.image_file }}">
         {% endif %}
 
         <p class="article-content">{{ post.content }}</p>
